--- a/local/reports/leave_distribution.ini
+++ b/local/reports/leave_distribution.ini
@@ -7,93 +7,93 @@
 path=custom-report
 
 [ar]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [ca]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [cs]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [en]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [en-GB]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [el]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [fr]
 name="(exemple) Ventilation des types de congé"
 description="CE N'EST PAS UN VRAI RAPPORT - Montre le pourcentage des types d'absence pris durant une année"
 
 [de]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [es]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [hu]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [it]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [km]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [nl]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [pl]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [pt]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [ru]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [uk]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [vi]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [fa]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [tr]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [ro]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [sk]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
 
 [zh]
-name="(example) Leave type distribution"
-description="IT IS NOT AN ACTUAL REPORT - Show the percentage of each leave type taken during a given year"
+name="Leave type distribution"
+description="Show the percentage of each leave type taken during a given year"
